fix: header overflow

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -28,7 +28,6 @@ main {
   flex-direction: column;
   justify-content: flex-start;
   min-height: 100vh;
-  padding: 0 1rem;
   transition: background-color 0.3s, color 0.3s;
 }
 
@@ -36,7 +35,6 @@ main section {
   animation: 0.6s cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s 1 fadeIn;
   animation-fill-mode: forwards;
   background-color: inherit;
-  max-width: 1140px;
   opacity: 0;
   width: 100%;
 }
@@ -46,6 +44,7 @@ main header {
   display: flex;
   flex-direction: column;
   height: 12.5rem;
+  justify-content: space-between;
   position: sticky;
   top: calc(5rem - 12.5rem);
   z-index: 10;
@@ -60,8 +59,8 @@ main header::before {
   height: 100%;
   position: absolute;
   top: 0;
-  left: -250%;
-  width: 500%;
+  left: 0;
+  width: 100%;
   z-index: -1;
 }
 
@@ -73,6 +72,12 @@ main header::before {
   100% {
     opacity: 1;
   }
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1140px;
+  width: 100%;
 }
 
 .meta h1 {
@@ -103,10 +108,6 @@ main header::before {
   text-align: center;
   transform: translateY(-1px);
   width: 1rem;
-}
-
-.buttons {
-  margin-top: auto;
 }
 
 button {
